# hudson

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  hudson_poc.html  pyproject.toml  requirements.txt  vag-dtc-priority-numbers.txt
Docs/: documentation.md  pre-uds-vag.md
Hudson/: __main__.py  cli.py
Hudson/core/: connection.py  dtc.py  dtc_lookup.py  dtcdecode.py  ecu_cache.py  ecu_tables.py  forscan.py  init.py  isotp.py  kwp2000.py  poller.py  socketcan_connection.py  telemetry.py  uds.py  uds_dtc.py  vin.py
Hudson/manufacturers/: bmw.py  ford.py  generic.py  mercedes.py  registry.py  toyota.py  volvo.py  vw_audi.py
Hudson/tui/: app.py  app.tcss
Hudson/tui/panes/: dashboard.py  dtcs.py  log.py  vehicle.py
Hudson/tui/screens/: dashboard.py  main.py  (+1 more)
core/: connection.py  isotp.py
hudson_data/: labels_loader.py  toyota.json  vw_audi.json
manufacturers/: generic.py
tests/: test_cli.py  test_dtc.py  test_dtc_modes.py  test_ecu_cache.py  test_init.py  test_isotp.py  test_kwp2000.py  test_labels_loader.py  test_manufacturers_bmw_mercedes.py  test_multi_ecu_dtc.py  test_poller.py  test_telemetry.py  test_toyota_enhanced.py  test_tui_smoke.py  test_uds_dtc.py  test_vcan_ford.py  test_vcan_integration.py  test_vcan_vag.py  test_vin_chain.py  test_volvo_kwp.py
tests/fixtures/: fake_connection.py
tools/: build_ford_dtc_db.py  elm327_emu.py  fake_ecu.py  probe_ecm_tcm.py  query_live.py  test_ecu.sh
tools/scenarios/: ford_transit_2010.yaml  ford_transit_mk7_22_tdci.yaml  vw_golf_mk6_tdi.yaml
tui/: app.py  app.tcss
tui/screens/: splash.py
(+1 files in other folders)
